--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.go linguist-language=go
-*.js linguist-language=vue
-*.css linguist-language=vue
-*.html linguist-language=vue
+*.js linguist-language=go
+*.css linguist-language=go
+*.html linguist-language=go
