--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.go linguist-language=Go
-*.js linguist-language=Go
-*.css linguist-language=Go
-*.html linguist-language=Go
+*.go linguist-language=golang
+*.js linguist-language=golang
+*.css linguist-language=golang
+*.html linguist-language=golang
