--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.go linguist-language=golang
-*.js linguist-language=golang
+*.vue linguist-language=golang
 *.css linguist-language=golang
 *.html linguist-language=golang
